[project]
name = "telegram-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "telethon",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "xdg-base-dirs",
    "typer",
    "rich",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
